--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,8 @@ html
       include gui.js
   body
     div(class='page-url')= pageUrl
+    div(class='screenshot')
+      img(src=`../server/screenshots/${parseScreenshotName(pageUrl)}`)
     ul(class='issues-container')
       each issue in issues
         li(class=`issue ${issue.type}`)
