--- a/packages/devtools/panel/panel.css
+++ b/packages/devtools/panel/panel.css
@@ -25,7 +25,7 @@ body {
     align-items: center;
     flex-direction: row;
     width: 100%;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     background: rgb(240, 240, 240);
     border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
