--- a/packages/pa11y-reporter-html/src/reporter.css
+++ b/packages/pa11y-reporter-html/src/reporter.css
@@ -1,98 +1,94 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #fff;
+.pa11y-report {
     font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 22px;
     color: #333;
 }
 
-li {
+.pa11y-report li {
     margin-bottom: 2rem;
 }
 
-h1,
-h2,
-p,
-pre,
-ul {
+.pa11y-report h1,
+.pa11y-report h2,
+.pa11y-report p,
+.pa11y-report pre,
+.pa11y-report ul {
     margin-top: 0;
     margin-bottom: 0;
 }
 
-h1 {
+.pa11y-report h1 {
     margin-bottom: 1rem;
     font-size: 1.8rem;
     line-height: 1em;
     font-weight: normal;
 }
 
-h1 a {
+.pa11y-report h1 a {
     color: #008cff;
     display: inline-block;
     text-decoration: none;
 }
 
-h2 {
+.pa11y-report h2 {
     font-size: 1rem;
     line-height: 1.4em;
 }
 
-pre {
+.pa11y-report pre {
     padding: 1rem;
     margin-top: 1rem;
     background: #f5f5f5;
     border-radius: 2px;
 }
 
-code {
+.pa11y-report code {
     display: block;
     width: 100%;
     white-space: pre-wrap;
     overflow: auto;
 }
 
-hr {
+.pa11y-report hr {
     border: solid 2px #e5e5e5;
     border-width: 2px 0 0 0;
 }
 
-footer {
+.pa11y-report footer {
     display: flex;
     flex-direction: row;
     color: #999;
 }
 
-footer > *:first-child {
+.pa11y-report footer > *:first-child {
     flex: 1 auto;
 }
 
-footer a {
+.pa11y-report footer a {
     color: #000;
     text-decoration: none;
 }
 
-footer a img {
+.pa11y-report footer a img {
     height: 2em;
     margin: 0 0.5em 0 0.75em;
     vertical-align: middle;
 }
 
-.page {
+.pa11y-report .pa11y-page {
     max-width: 800px;
     padding: 2rem 1rem;
 }
 
-form {
+.pa11y-report form {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-top: 30px;
 }
 
-form label {
+.pa11y-report form label {
     position: relative;
     padding: 1rem;
     font-size: 1em;
@@ -108,90 +104,90 @@ form label {
     border-bottom: solid 2px transparent;
 }
 
-form input {
+.pa11y-report form input {
     display: none;
 }
 
-form input:checked + label {
+.pa11y-report form input:checked + label {
     border-bottom-color: currentColor;
 }
 
-form label:focus,
-form label:hover {
+.pa11y-report form label:focus,
+.pa11y-report form label:hover {
     background: rgba(0, 0, 0, 0.05);
     transition: none;
 }
 
-form label:active {
+.pa11y-report form label:active {
     background: rgba(0, 0, 0, 0.1);
     transition: none;
 }
 
-form output {
+.pa11y-report form output {
     flex: none;
     width: 100%;
 }
 
-form input:not([value="all"]):checked ~ output li {
+.pa11y-report form input:not([value="all"]):checked ~ output li {
     display: none;
 }
 
-form input[value="errors"]:checked ~ output li.error {
+.pa11y-report form input[value="errors"]:checked ~ output li.error {
     display: block;
 }
 
-form input[value="warnings"]:checked ~ output li.warning {
+.pa11y-report form input[value="warnings"]:checked ~ output li.warning {
     display: block;
 }
 
-form input[value="notices"]:checked ~ output li.notice {
+.pa11y-report form input[value="notices"]:checked ~ output li.notice {
     display: block;
 }
 
-.count-error {
+.pa11y-report .count-error {
     color: #ff0000;
 }
 
-.count-warning {
+.pa11y-report .count-warning {
     color: #ffae00;
 }
 
-.count-notice {
+.pa11y-report .count-notice {
     color: #00b6ff;
 }
 
-.clean-list {
+.pa11y-report .clean-list {
     margin-left: 0;
     padding-left: 0;
     list-style: none;
 }
 
-.results-list {
+.pa11y-report .results-list {
     margin-top: 2rem;
 }
 
-.result {
+.pa11y-report .result {
     padding: 1rem;
 }
 
-.error {
+.pa11y-report .error {
     border-left: solid 3px #ff0000;
 }
 
-.warning {
+.pa11y-report .warning {
     border-left: solid 3px #ffae00;
 }
 
-.notice {
+.pa11y-report .notice {
     border-left: solid 3px #00b6ff;
 }
 
-.screenshot {
+.pa11y-report .screenshot {
     max-width: 100%;
     display: block;
 }
 
-.screenshot-container {
+.pa11y-report .screenshot-container {
     border: solid #d5d5d5;
     border-width: 30px 4px 4px;
     border-radius: 4px;
@@ -201,30 +197,30 @@ form input[value="notices"]:checked ~ output li.notice {
     display: block;
 }
 
-.buttons-container {
+.pa11y-report .buttons-container {
     position: absolute;
     margin-top: -24px;
     margin-left: 5px;
 }
 
-.button-osx {
+.pa11y-report .button-osx {
     width: 10px;
     height: 10px;
     display: inline-block;
     border-radius: 10px;
 }
 
-.close {
+.pa11y-report .close {
     background: #ff5c5c;
     border: 1px solid #e33e41;
 }
 
-.minimize {
+.pa11y-report .minimize {
     background: #ffbd4c;
     border: 1px solid #e09e3e;
 }
 
-.zoom {
+.pa11y-report .zoom {
     background: #00ca56;
     border: 1px solid #14ae46;
 }
