--- a/packages/ws/public/index.css
+++ b/packages/ws/public/index.css
@@ -13,6 +13,12 @@ button {
     font-size: 1em;
 }
 
+/* Remove Chrome autofill yellow background ;) */
+input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px white inset;
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 .form-container {
     display: flex;
     padding: 1.5rem;
@@ -20,7 +26,8 @@ button {
 }
 
 #site-form {
-    width: 100%;
+    width: auto;
+    margin: auto;
 }
 
 .form-container input {
@@ -28,6 +35,7 @@ button {
     border: none;
     border-bottom: 1px solid black;
     outline: none;
+    transition: box-shadow .4s, -webkit-box-shadow .4s, border .4s;
 }
 
 .site-url-container,
@@ -36,7 +44,7 @@ button {
 }
 
 .site-url-container input {
-    width: 100%;
+    width: 61.5rem;
 }
 
 .form-container select {
@@ -46,22 +54,30 @@ button {
     border-bottom: 1px solid black;
     border-radius: 0px;
     outline: none;
-    width: 33%;
+    width: 30rem;
     background-color: white;
     cursor: pointer;
     margin-right: 1.5rem;
-    color: grey;
+    transition: box-shadow .4s, -webkit-box-shadow .4s, border .4s;
 }
 
-.options-container input {
-    width: 33%;
+/* .options-container::after {
+    content: '\0025BE';
+} */
+
+input[name="wait"] {
+    width: 30rem;
 }
 
-input:focus {
-    border-bottom-width: 3px;
-    transition: all ease 0.3s;
+input:focus,
+select:focus {
+    border-bottom-width: 2px;
+    border-bottom: 1px solid black;
+    -webkit-box-shadow: 0 1px 0 0 black;
+    box-shadow: 0 1px 0 0 black;
 }
 
+/* check button */
 .form-container #submit-button {
     height: 2.5rem;
     outline: none;
@@ -69,10 +85,47 @@ input:focus {
     border-radius: 0px;
     background-color: rgba(0, 0, 0, 0.05);
     color: black;
-    width: 33%;
+    width: 30rem;
+    cursor: pointer;
+    transition: all 150ms ease-out;
+}
+
+.form-container #submit-button:hover {
+    background-color: rgba(0, 0, 0, 0.10);
+    transition: none;
 }
 
 .result-container {
     padding: 1.5rem;
     width: 100%;
+}
+
+.loader {
+    border: 12px solid #f3f3f3;
+    border-top: 12px solid grey;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+    margin: auto;
+    margin-top: 3rem;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.pa11y-page {
+    margin: auto;
+}
+
+.url-error {
+    margin: auto;
+    width: 61.5rem;
 }
