--- a/packages/pa11y-reporter-html/src/reporter.css
+++ b/packages/pa11y-reporter-html/src/reporter.css
@@ -5,10 +5,6 @@
     color: #333;
 }
 
-.pa11y-report li {
-    margin-bottom: 2rem;
-}
-
 .pa11y-report h1,
 .pa11y-report h2,
 .pa11y-report p,
@@ -20,7 +16,7 @@
 
 .pa11y-report h1 {
     margin-bottom: 1rem;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     line-height: 1em;
     font-weight: normal;
 }
@@ -39,7 +35,7 @@
 .pa11y-report pre {
     padding: 1rem;
     margin-top: 1rem;
-    background: #f5f5f5;
+    background: rgba(255, 255, 255, 0.2);
     border-radius: 2px;
 }
 
@@ -93,7 +89,6 @@
     padding: 1rem;
     font-size: 1em;
     line-height: 1em;
-    text-transform: uppercase;
     background: transparent;
     border: 0;
     border-radius: 0;
@@ -145,15 +140,15 @@
 }
 
 .pa11y-report .count-error {
-    color: #ff0000;
+    color: #E74C3C;
 }
 
 .pa11y-report .count-warning {
-    color: #ffae00;
+    color: #F39C12;
 }
 
 .pa11y-report .count-notice {
-    color: #00b6ff;
+    color: #3498DB;
 }
 
 .pa11y-report .clean-list {
@@ -168,18 +163,19 @@
 
 .pa11y-report .result {
     padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 .pa11y-report .error {
-    border-left: solid 3px #ff0000;
+    background-color: rgba(231, 76, 60, 0.5);
 }
 
 .pa11y-report .warning {
-    border-left: solid 3px #ffae00;
+    background-color: rgba(243, 156, 18, 0.5);
 }
 
 .pa11y-report .notice {
-    border-left: solid 3px #00b6ff;
+    background-color: rgba(52, 152, 219, 0.5);
 }
 
 .pa11y-report .screenshot {
