--- a/packages/pa11y-reporter-html/src/reporter.css
+++ b/packages/pa11y-reporter-html/src/reporter.css
@@ -17,7 +17,7 @@
 .pa11y-report h1 {
     margin-bottom: 1rem;
     font-size: 1.6rem;
-    line-height: 1em;
+    line-height: 1.2em;
     font-weight: normal;
 }
 
@@ -33,7 +33,8 @@
 }
 
 .pa11y-report pre {
-    padding: 1rem;
+    margin: 0;
+    padding: 0 1rem 1rem 1rem;
     margin-top: 1rem;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 2px;
@@ -42,8 +43,23 @@
 .pa11y-report code {
     display: block;
     width: 100%;
-    white-space: pre-wrap;
+    padding: 1rem 0;
+    white-space: nowrap;
     overflow: auto;
+}
+
+.pa11y-report code::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+.pa11y-report code::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+}
+
+.pa11y-report code::-webkit-scrollbar-track {
+    background: transparent;
 }
 
 .pa11y-report hr {
@@ -81,12 +97,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
     margin-top: 30px;
 }
 
 .pa11y-report form label {
     position: relative;
     padding: 1rem;
+    margin-bottom: 2px;
     font-size: 1em;
     line-height: 1em;
     background: transparent;
@@ -95,8 +113,6 @@
     cursor: pointer;
     transition: background 150ms ease-out;
     outline: 0;
-    border-top: solid 2px transparent;
-    border-bottom: solid 2px transparent;
 }
 
 .pa11y-report form input {
@@ -104,7 +120,8 @@
 }
 
 .pa11y-report form input:checked + label {
-    border-bottom-color: currentColor;
+    border-bottom: solid 2px currentColor;
+    margin-bottom: 0;
 }
 
 .pa11y-report form label:focus,
@@ -119,8 +136,13 @@
 }
 
 .pa11y-report form output {
+    display: block;
     flex: none;
     width: 100%;
+}
+
+.pa11y-report .issue-rule {
+    word-break: break-all;
 }
 
 .pa11y-report form input:not([value="all"]):checked ~ output li {
@@ -158,7 +180,7 @@
 }
 
 .pa11y-report .results-list {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .pa11y-report .result {
