--- a/packages/ws/app/index.css
+++ b/packages/ws/app/index.css
@@ -2,8 +2,8 @@ html,
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     overflow-x: hidden;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
 *,
@@ -36,9 +36,9 @@ header a {
 .form-container input,
 .form-container select {
     height: 2.5rem;
+    font-size: 1em;
     border: none;
     border-bottom: 1px solid black;
-    font-size: 1em;
     outline: none;
     transition: box-shadow .4s, -webkit-box-shadow .4s, border .4s;
 }
@@ -69,8 +69,8 @@ header a {
 .options-container {
     display: flex;
     flex-direction: row;
-    align-items: baseline;
     justify-content: flex-start;
+    align-items: baseline;
     width: 100%;
     margin-bottom: 1.5rem;
 }
@@ -87,20 +87,20 @@ header a {
 
 .form-container select {
     height: 2.5rem;
-    -webkit-appearance: none;
+    background-color: white;
     border: none;
     border-bottom: 1px solid black;
-    border-radius: 0px;
+    border-radius: 0;
     outline: none;
-    background-color: white;
     cursor: pointer;
     transition: box-shadow .4s, -webkit-box-shadow .4s, border .4s;
+    -webkit-appearance: none;
 }
 
 input:focus,
 select:focus {
-    border-bottom-width: 2px;
     border-bottom: 1px solid black;
+    border-bottom-width: 2px;
     -webkit-box-shadow: 0 1px 0 0 black;
     box-shadow: 0 1px 0 0 black;
 }
@@ -120,15 +120,15 @@ select:-webkit-autofill:focus {
 
 /* check button */
 .form-container button {
+    width: 8rem;
+    max-width: 1000%;
     height: 2.5rem;
-    outline: none;
+    color: #fff;
+    font-size: 1em;
+    background-color: #42513f;
     border: 0;
     border-radius: 2px;
-    background-color: #3498DB;
-    color: #fff;
-    width: 8rem;
-    font-size: 1em;
-    max-width: 1000%;
+    outline: none;
     cursor: pointer;
     transition: all 150ms ease-out;
 }
@@ -143,7 +143,7 @@ select:-webkit-autofill:focus {
 
 .loader {
     border: 8px solid #f3f3f3;
-    border-top: 8px solid #3498DB;
+    border-top: 8px solid #42513f;
     border-radius: 50%;
     width: 75px;
     height: 75px;
