--- a/src/reporter/reporter.css
+++ b/src/reporter/reporter.css
@@ -163,3 +163,34 @@
     background: #00ca56;
     border: 1px solid #14ae46;
 }
+
+.report-title-container {
+    display: flex;
+}
+
+.report-title-container h1 {
+    margin-top: 0.25em;
+    line-height: 1em;
+}
+
+.download-report {
+    margin-left: 1em;
+    line-height: 1em;
+    height: 2.5em;
+    max-width: 1000%;
+    color: #fff;
+    font-size: 1em;
+    padding: 0.75em 1em;
+    text-decoration: none;
+    background-color: #42513f;
+    border: 0;
+    border-radius: 2px;
+    outline: none;
+    cursor: pointer;
+    transition: all 150ms ease-out;
+}
+
+.download-report:hover {
+    background-color: #1b7bbc;
+}
+
