--- a/src/reporter/reporter.css
+++ b/src/reporter/reporter.css
@@ -166,17 +166,16 @@
 
 .report-title-container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .report-title-container h1 {
-    margin-top: 0.25em;
-    line-height: 1em;
+    margin: 0;
 }
 
 .download-report {
     margin-left: 1em;
-    line-height: 1em;
-    height: 2.5em;
     max-width: 1000%;
     color: #fff;
     font-size: 1em;
