--- a/public/index.css
+++ b/public/index.css
@@ -25,7 +25,7 @@ header a {
 .container {
     width: 800px;
     max-width: 100%;
-    padding: 1rem;
+    padding: 1rem 1rem 0.5rem 1rem;
     margin: auto;
 }
 
@@ -202,6 +202,7 @@ select:-webkit-autofill:focus {
 .signature a {
     text-decoration: none;
     color: black;
+    font-size: 0.75em;
 }
 
 .signature span {
