--- a/reporter/reporter.css
+++ b/reporter/reporter.css
@@ -91,6 +91,7 @@
 .pa11y-report .pa11y-page {
     max-width: 800px;
     padding: 2rem 1rem;
+    margin: 0 auto;
 }
 
 .pa11y-report .issue-rule {
@@ -130,7 +131,7 @@
     border: solid #d5d5d5;
     border-width: 30px 4px 4px;
     border-radius: 4px;
-    overflow: scroll;
+    overflow-y: scroll;
     max-height: 500px;
     margin: 2em auto;
     display: block;
@@ -193,12 +194,12 @@
 .signature {
     display: flex;
     justify-content: flex-end;
+    font-size: 0.75em;
+    color: black;
 }
 
 .signature a {
     text-decoration: none;
-    color: black;
-    font-size: 0.75em;
 }
 
 .signature span {
@@ -206,7 +207,7 @@
 }
 
 .signature svg {
-    height: 1em;
+    height: 1.5em;
     width: 1.5em;
 }
 
